--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,7 +2,8 @@
   "suggest.enablePreview": true,
   "prettier.requireConfig": true,
 
-  "angular.experimental-ivy": true,
+  "angular.enable-experimental-ivy-prompt": false,
+  "angular.experimental-ivy": false,
 
   "tslint.autoFixOnSave": false,
   "eslint.autoFixOnSave": false,
