--- a/symlinks/.config/kitty/gruvbox_theme.conf
+++ b/symlinks/.config/kitty/gruvbox_theme.conf
@@ -47,3 +47,7 @@ color14               #8ec07c
 color7                #a89984
 # dark gray
 color15               #928374
+
+# light yellow
+active_border_color   #fabd2d
+inactive_border_color #928374
