--- a/symlinks/.config/kitty/kitty.conf
+++ b/symlinks/.config/kitty/kitty.conf
@@ -26,6 +26,8 @@ map ctrl+a>4 goto_tab 4
 map ctrl+a>5 goto_tab 5
 map ctrl+a>6 goto_tab 6
 map ctrl+a>7 goto_tab 7
+map ctrl+a>8 goto_tab 8
+map ctrl+a>9 goto_tab 9
 map ctrl+a>i next_layout
 map ctrl+a>z toggle_layout stack
 map ctrl+a>[ previous_window
