map quickfix navigation

--- a/symlinks/.config/kitty/kitty.conf
+++ b/symlinks/.config/kitty/kitty.conf
@@ -13,6 +13,7 @@ single_window_margin_width 0
 remember_window_size yes
 
 confirm_os_window_close 1
+macos_option_as_alt yes
 
 map cmd+equal change_font_size all +2.0
 map ctrl+a>c new_tab
