--- a/symlinks/.config/ghostty/config
+++ b/symlinks/.config/ghostty/config
@@ -7,3 +7,4 @@ keybind = ctrl+a>h=goto_split:left
 keybind = ctrl+a>j=goto_split:bottom
 keybind = ctrl+a>k=goto_split:top
 keybind = ctrl+a>z=toggle_split_zoom
+keybind = ctrl+a>v=write_screen_file:open
