--- a/symlinks/.config/ghostty/config
+++ b/symlinks/.config/ghostty/config
@@ -8,3 +8,10 @@ keybind = ctrl+a>j=goto_split:bottom
 keybind = ctrl+a>k=goto_split:top
 keybind = ctrl+a>z=toggle_split_zoom
 keybind = ctrl+a>v=write_screen_file:open
+keybind = shift+enter=text:\n
+
+# scroll up/down
+keybind = page_up=scroll_page_lines:-5
+keybind = page_down=scroll_page_lines:5
+keybind = home=scroll_to_top
+keybind = end=scroll_to_bottom
