--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,6 +9,10 @@ keybind = ctrl+a>k=goto_split:top
 keybind = ctrl+a>z=toggle_split_zoom
 keybind = ctrl+a>v=write_screen_file:open
 keybind = shift+enter=text:\n
+keybind = cmd+alt+l=goto_split:right
+keybind = cmd+alt+h=goto_split:left
+keybind = cmd+alt+j=goto_split:bottom
+keybind = cmd+alt+k=goto_split:top
 
 # scroll up/down
 keybind = page_up=scroll_page_lines:-5
